--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,52 @@
-Flask~=3.0.2
-Werkzeug~=3.0.1
-psycopg2-binary
-flask_sqlalchemy
-flask_cors
-rich~=13.7.1
-pytz~=2024.1
-pyyaml~=6.0.1
-sqlalchemy~=2.0.28
-python-dotenv~=1.0.1
-waitress
-bcrypt~=4.1.2
-pyjwt~=2.8.0
-flask_jwt_extended
-waitress
-pyopenssl
-pydantic~=2.8.2
-psycopg2~=2.9.9
+annotated-types==0.7.0
+anyio==4.4.0
+bcrypt==4.1.3
+blinker==1.8.2
+certifi==2024.7.4
+cffi==1.16.0
+click==8.1.7
+colorama==0.4.6
+cryptography==42.0.8
+dnspython==2.6.1
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.111.1
+fastapi-cli==0.0.4
+Flask==3.0.3
+Flask-Cors==4.0.1
+Flask-JWT-Extended==4.6.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+psycopg2-binary==2.9.9
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pyOpenSSL==24.1.0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+rich==13.7.1
+shellingham==1.5.4
+sniffio==1.3.1
+SQLAlchemy==2.0.31
+starlette==0.37.2
+typer==0.12.3
+typing_extensions==4.12.2
+uvicorn==0.30.1
+waitress==3.0.0
+watchfiles==0.22.0
+websockets==12.0
+Werkzeug==3.0.3
