--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
 bcrypt==4.1.3
+bidict==0.23.1
 blinker==1.8.2
 certifi==2024.7.4
 cffi==1.16.0
@@ -12,9 +13,11 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.111.1
 fastapi-cli==0.0.4
+fastapi-socketio==0.0.10
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
+Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 h11==0.14.0
@@ -35,18 +38,24 @@ Pygments==2.18.0
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dotenv==1.0.1
+python-engineio==4.10.1
 python-multipart==0.0.9
+python-socketio==5.11.4
 pytz==2024.1
 PyYAML==6.0.1
 rich==13.7.1
 shellingham==1.5.4
+simple-websocket==1.1.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
+uv==0.4.26
 uvicorn==0.30.1
+uvloop==0.21.0
 waitress==3.0.0
 watchfiles==0.22.0
 websockets==12.0
 Werkzeug==3.0.3
+wsproto==1.2.0
