--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,17 @@
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.4.0
-attrs==24.2.0
-bcrypt==4.1.3
-bidict==0.23.1
-blinker==1.8.2
-certifi==2024.7.4
-cffi==1.16.0
-charset-normalizer==3.4.0
-chromedriver-autoinstaller==0.6.4
-click==8.1.7
-colorama==0.4.6
-cryptography==42.0.8
-cx_Freeze==7.2.4
-cx_Logging==3.2.1
-defusedxml==0.7.1
-dnspython==2.6.1
-email_validator==2.2.0
-exceptiongroup==1.2.2
-fastapi==0.111.1
-fastapi-cli==0.0.4
-fastapi-socketio==0.0.10
-Flask==3.0.3
-Flask-Cors==4.0.1
-Flask-JWT-Extended==4.6.0
-Flask-SocketIO==5.4.1
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
-lief==0.15.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-Nuitka==2.4.11
-ordered-set==4.1.0
-outcome==1.3.0.post0
-packaging==24.1
-pdfkit==1.0.0
-pefile==2023.2.7
-pillow==11.0.0
-psutil==5.9.8
-psycopg2-binary==2.9.9
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-pyinstaller==6.11.0
-pyinstaller-hooks-contrib==2024.9
-PyJWT==2.8.0
-pyOpenSSL==24.1.0
+chromedriver_autoinstaller==0.6.4
+fastapi==0.115.4
+fastapi_socketio==0.0.10
+Pillow==11.0.0
+psycopg2==2.9.10
+pydantic==2.9.2
+PyJWT==2.9.0
 pyserial==3.5
-PySocks==1.7.1
 python-dotenv==1.0.1
-python-engineio==4.10.1
-python-multipart==0.0.9
-python-socketio==5.11.4
-pytz==2024.1
+python_bcrypt==0.3.2
 pywin32==308
-pywin32-ctypes==0.2.3
-PyYAML==6.0.1
-requests==2.32.3
-rich==13.7.1
-selenium==4.26.0
-setuptools==75.3.0
-shellingham==1.5.4
-simple-websocket==1.1.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.31
-starlette==0.37.2
-trio==0.27.0
-trio-websocket==0.11.1
-typer==0.12.3
-typing_extensions==4.12.2
-tzdata==2024.2
-tzlocal==5.2
-urllib3==2.2.3
-uv==0.4.30
+PyYAML==6.0.2
+rich==13.9.4
+selenium==4.26.1
+SQLAlchemy==2.0.36
 uvicorn==0.32.0
-waitress==3.0.0
-watchfiles==0.22.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-websockets==12.0
-Werkzeug==3.0.3
-wsproto==1.2.0
-zstandard==0.23.0
+Werkzeug==3.1.3
